build(backend): reduce the build image size
Based on article: https://www.azul.com/blog/building-java-containers-without-a-dockerfile-azul-zulu-and-paketo-buildpacks/

This is part of the work planned for issue #35.